# 3DCppSoftwareRenderer

./: .gitignore  CMakeLists.txt
thirdpillow/: .cproject  .project  CMakeLists.txt  span.cpp  span.h  teststeve.mtl  thirdpillow.sln  thirdpillow.vcxproj  thirdpillow.vcxproj.filters
thirdpillow/cmake/: FindSDL2.cmake
thirdpillow/res/: alduin_lod.ppm  alduinsmall.ppm  bla.ppm  gradient.ppm  qualitygrass.ppm  testgolem.mtl  testgolem.ppm  testkoala.ppm  testslime.mtl  testslime.ppm  testwolf.mtl  testwolf.ppm
thirdpillow/src/: camera.cpp  camera.h  color.cpp  color.h  cube.h  displayer.cpp  displayer.h  edge.cpp  edge.h  engine.cpp  engine.h  face.cpp  face.h  image.cpp  image.h  inputtable.h  inputter.cpp  inputter.h  main.cpp  matrix4.cpp  matrix4.h  mesh.cpp  mesh.h  polygon.cpp  polygon.h  putils.cpp  putils.h  quaternion.cpp  quaternion.h  rasterizer.cpp  rasterizer.h  screen.cpp  screen.h  span.cpp  span.h  t_transform.cpp  t_transform.h  thing.cpp  thing.h  timekeeper.cpp  (+19 more)
